crates/test-generator/tests/snapshots/tsx/test_generated_constructor_type.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const ctor: new () => object = class {};

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "ctor")
      type: (type_annotation
        (constructor_type
          parameters: (formal_parameters)
          type: (predefined_type "object")
        )
      )
      value: (class
        body: (class_body)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "ctor",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 11,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
